unpackaged/objects/BLND_DFDT_Issue__c.object
<CustomObject>
	<fields>
		<fullName>BLND_Description__c</fullName>
		<label>Description</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Expansion__c</fullName>
		<label>Expansion</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Extra_Field__c</fullName>
		<label>Extra Field</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Impact__c</fullName>
		<label>Impact</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Include_in_Report__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Include in Report</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>BLND_Issue_Owner__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Issue Owner</label>
		<referenceTo>User</referenceTo>
		<relationshipName>R00N30000002PYg6EAG</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Issue_Raised_On__c</fullName>
		<label>Issue Raised On</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>BLND_Priority__c</fullName>
		<label>Priority</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Medium</fullName>
					<default>true</default>
					<label>Medium</label>
				</value>
				<value>
					<fullName>High</fullName>
				</value>
				<value>
					<fullName>Low</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Project_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Project Link</label>
		<referenceTo>BLND_DFDT_Project__c</referenceTo>
		<relationshipLabel>DreamTeam Issues</relationshipLabel>
		<relationshipName>R00N30000002PYgUEAW</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Resolution__c</fullName>
		<label>Resolution</label>
		<length>32000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>BLND_Resolve_By__c</fullName>
		<label>Resolve By</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>BLND_Severity__c</fullName>
		<label>Severity</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Medium</fullName>
					<default>true</default>
					<label>Medium</label>
				</value>
				<value>
					<fullName>High</fullName>
				</value>
				<value>
					<fullName>Low</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Not Started</fullName>
					<default>true</default>
					<label>Not Started</label>
				</value>
				<value>
					<fullName>In Progress</fullName>
				</value>
				<value>
					<fullName>Resolved</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Task_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Task Link</label>
		<referenceTo>BLND_DFDT_Task__c</referenceTo>
		<relationshipLabel>DreamTeam Issues</relationshipLabel>
		<relationshipName>R00N30000002PYjGEAW</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>BLND_Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Issue</fullName>
				</value>
				<value>
					<fullName>Risk</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>BLND_Version__c</fullName>
		<label>Version</label>
		<precision>4</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<label>DreamTeam Issue</label>
	<nameField>
		<label>Issue Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Issues</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>